--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
                     <input type="text" id="avatar-url">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
-                <h1 id="username" >ekCit</h1>
-                <h4 id="persona-tag" >Python / Web / 互联网教育</h4>
+                <h1 id="username" >章加波</h1>
+                <h4 id="persona-tag" >php / Web / 互联网</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">姓名</label><span class="label-value">XXX</span></li>
+                        <label class="left-label">姓名</label><span class="label-value">章加波</span></li>
                     <li>
                         <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li>
-                        <label class="left-label">毕业院校</label><span class="label-value">北京邮电大学</span></li>
+                        <label class="left-label">毕业院校</label><span class="label-value">杭州电子科技大学</span></li>
                     <li>
-                        <label class="left-label">毕业年份</label><span class="label-value">2017</span></li>
+                        <label class="left-label">毕业年份</label><span class="label-value">2015</span></li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -45,13 +45,11 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">182XXXXXXXX</span></li>
+                        <label class="left-label">手机</label><span class="label-value">189XXXXXXXX</span></li>
                     <li>
-                        <label class="left-label">邮箱</label><span class="label-value">crmrc2014@gmail.com</span></li>
+                        <label class="left-label">邮箱</label><span class="label-value">812941112@qq.com</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
-                    <li>
-                        <label class="left-label">Github</label><span class="label-value">github.com/ekCit</span></li>
+                        <label class="left-label">Github</label><span class="label-value">github.com/zhangjiabo0</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
@@ -59,7 +57,7 @@
                 <hr>
                 <ul class="progress-list">
                     <li>
-                        <label class="left-label">Python</label>
+                        <label class="left-label">php</label>
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
@@ -68,10 +66,10 @@
                     </li>
                     <li>
                         <label class="left-label">Javascript</label>
-                        <progress value="60" max="100"></progress>
+                        <progress value="70" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">机器学习</label>
+                        <label class="left-label">C</label>
                         <progress value="60" max="100"></progress>
                     </li>
                 </ul>
@@ -81,13 +79,13 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js、React.js</span></li>
+                        <label class="left-label">前端</label><span class="label-value">jQuery</span></li>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span></li>
+                        <label class="left-label">后端</label><span class="label-value">Node.js、MongoDB、MySQL、Redis</span></li>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">我全都是瞎写的。</span></li>
+                        <label class="left-label">其它</label><span class="label-value">Python、C、C++、Java、PHP</span></li>
                     </li>
                 </ul>
             </div>
